tests added for codegen and added test data