@@ -6,24 +6,12 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.PrintWriter;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import javax.tools.JavaCompiler;
-import javax.tools.JavaFileObject;
-import javax.tools.SimpleJavaFileObject;
-import javax.tools.ToolProvider;
 
 import org.ebayopensource.turmeric.tools.codegen.AbstractServiceGeneratorTestCase;
 import org.ebayopensource.turmeric.tools.codegen.ServiceGenerator;
@@ -33,6 +21,7 @@ import org.junit.Test;
 
 public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTestCase {
 	
+	
   
     public static String getPackageFromNamespace(String namespace) {
     	
@@ -41,36 +30,27 @@ public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTest
     	return com.sun.tools.xjc.api.XJC.getDefaultPackageName(namespace);
     }
 	@Test
-	public void testEproto() throws Exception{
-	
+	public void testSequenceNumberConsistency() throws Exception{
+		File destDir = testingdir.getDir();
+		File bin = new File(destDir.getAbsolutePath() + "/bin/");
 		
-		String serviceName = "CalculatorService";
-		File resource = new File("wsdlorxsd/fieldInformation");
-		File bin = new File("generated/bin/");
-		File proto = new File("generated/");
-		File gensrc = new File("generated/gen-src/");
+		System.out.println(bin.getAbsoluteFile());
+		File gensrc = new File(destDir,"gen-src");
 		
 		
-		URL [] urls = {bin.toURI().toURL(),proto.toURI().toURL(),gensrc.toURI().toURL()};
+		URL [] urls = {new URL("file:/"+ destDir.getAbsolutePath()+"/bin/"),destDir.toURI().toURL(),gensrc.toURI().toURL()};
 		URLClassLoader loader = new URLClassLoader(urls,Thread.currentThread().getContextClassLoader());
 		Thread.currentThread().setContextClassLoader(loader);
-		File srcdir = new File("JUnitTests/src/proto/files");
-		String destDir = new File("generated").getAbsolutePath();
-		File wsdlpath = new File("wsdlorxsd/TestWsdlXsdTypes.wsdl");
-		
-		//compileJProto(srcdir.getAbsolutePath(),destDir,srcdir.getAbsolutePath()+"/ExtendComplexType.proto");
-		String name = "CalculatorService";
-		String wsdlNSToPkg = getPackageFromNamespace("http://codegen.tools.soaframework.test.ebay.com");
-		//String wsdlNSToPkg = "com.ebay.marketplace.search.v1.services";
-		wsdlNSToPkg = getPackageFromNamespace("http://codegen.tools.soaframework.test.ebay.com");
-		//String relativePath ="generated/"+ packagetoDirPath(wsdlNSToPkg)+"/proto/" +name+".java";
-		
-		//compile(relativePath);
-		File file = new File("generated/gen-meta-src/META-INF/soa/services/proto/CalculatorService/CalculatorService.proto");
+
+		File wsdlpath = getProtobufRelatedInput("TestWsdlXsdTypes.wsdl");
+
+
+
+		File file = new File(destDir.getAbsolutePath() +"/gen-meta-src/META-INF/soa/services/proto/CalculatorService/CalculatorService.proto");
 		
 		CodeGenUtil.deleteContentsOfDir(new File(file.getParent()));
-		generateJaxbClasses(wsdlpath.getAbsolutePath(), destDir);
-		Class<?> protoClass = Thread.currentThread().getContextClassLoader().loadClass(wsdlNSToPkg +".proto." +serviceName);
+		generateJaxbClasses(wsdlpath.getAbsolutePath(), destDir.getAbsolutePath(),bin);
+
 		ProtoFileParser parser = new ProtoFileParser(file);
 		List<Message> msg = parser.parse();
 	
@@ -91,7 +71,7 @@ public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTest
 					
 					Map<String,List<String>> msgMap1 = getMessageInfo(msg);
 					CodeGenUtil.deleteContentsOfDir(new File(file.getParent()));
-					generateJaxbClasses(wsdlpath.getAbsolutePath(), destDir);
+					generateJaxbClasses(wsdlpath.getAbsolutePath(), destDir.getAbsolutePath(),bin);
 					
 					
 					ProtoFileParser parser1 = new ProtoFileParser(file);
@@ -137,31 +117,7 @@ public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTest
 					}
 		}
 		
-		
-		
-		
 			
-	
-		
-		/*MyComplexType complextype = (MyComplexType) jaxbClasses.get("MyComplexType").newInstance();
-		complextype.setElemA(344.55f);
-		SampleComplexType sample = (SampleComplexType) jaxbClasses.get("SampleComplexType").newInstance();
-		sample.getEnt().add(23);
-		sample.setValue1("test1");
-		sample.setValue10("test10");
-		sample.setValue2("test2");
-		sample.setValue4("test3");
-		sample.setValue8("test8");
-		sample.setValue9("test9");
-		complextype.setElemB(sample);
-		ExtendMyComplexType extended = (ExtendMyComplexType) jaxbClasses.get("ExtendMyComplexType").newInstance();
-		extended.setElemB(sample);
-		extended.setElemA(344.33f);
-		extended.setElemC("test");
-		
-		
-	    invokeNewInstance(jaxbClasses.get("ExtendMyComplexType"),eprotoClasses.get("ExtendMyComplexType"), protoClass,"ExtendMyComplexType",extended);
-  */		
 		 
 	}
 	
@@ -183,233 +139,27 @@ public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTest
 		
 	}
 	
-	public Object makeProtoObject(List<MessageInformation> msgList,MessageInformation ms,String wsdlNSToPkg) throws ClassNotFoundException, IllegalArgumentException, IllegalAccessException, InvocationTargetException{
-		
-		Class<?> protoClass = Thread.currentThread().getContextClassLoader().loadClass(wsdlNSToPkg +".proto.CalculatorService");
-		Object builderObj = null;
 
-		Object builtObj = null;
-		Class<?> [] innerClasses = protoClass.getDeclaredClasses();
-		
-		builderObj = createBuilder(ms, innerClasses, builderObj);
-		Object descriptorObj = null;
-		Class<?> bc = builderObj.getClass();
-		Method [] mthd = bc.getDeclaredMethods();
-		for(ElementInformation el :ms.getElementInfo()){
-			
-			/*Class<?> bc = builderObj.getClass();
-			Method [] mthd = bc.getDeclaredMethods();
-				for(Method m: mthd){
-					if(m.getName().equals("getDescriptorForType")){
-						Object builder  = m.invoke(builderObj);
-						
-								Class<?> bu = builder.getClass();
-								Method [] buMthd = bu.getDeclaredMethods();
-								
-								 for(Method m1 : buMthd){
-									 
-									 if(m1.getName().equals("findFieldByName")){
-										 
-										 descriptorObj =  m1.invoke(builder,el.getElementName());
-										 break;
-									 }
-								 }
-								 break;
-					}
-					
-					
-				}*/
-				settingFieldValue(msgList,ms,builderObj, el,wsdlNSToPkg);
-				
-				
-				
-			
-		}
-		for(Method m: mthd){
-			if(m.getName().equals("build")){
-				builtObj = m.invoke(builderObj);
-				System.out.println("");
-				break;
-				
-			}
-		}
-		return builtObj;
 	
-	}
 	
-	public void settingFieldValue(List<MessageInformation> msgList,MessageInformation ms,Object builderObj,ElementInformation el,String wsdlNSToPkg) throws IllegalArgumentException, IllegalAccessException, InvocationTargetException, ClassNotFoundException{
-		String methodPrefix ="set";
-		if(el.isList()){
-			methodPrefix ="add";
-	 	}
-		Method [] mtds =  builderObj.getClass().getDeclaredMethods();
-		for(Method m : mtds){
-			
-			
-			if(m.getName().equals(methodPrefix+ firstLetterUpperCase(el.getElementName()))){
-				
-				 if(el.getDataType().equals("string")){
-					 
-						
-						m.invoke(builderObj,"test");
-						break;
-				 }else if(el.getDataType().equals("int")){
-					 	
-						m.invoke(builderObj,123);
-						break;
-				 }else if(el.getDataType().equals("float")){
-						
-						m.invoke(builderObj,12.4f);
-						break;
-				 }
-				 else {
-						for(MessageInformation mi :msgList){
-							if(mi.getMessageName().equals(el.getDataType())){
-								m.invoke(makeProtoObject(msgList,mi,wsdlNSToPkg));
-								break;
-							}
-						}
-						
-						break;
-				 }
-			
-			}
-		}
-	}
 	
-	public Object createBuilder(MessageInformation ms,Class<?> [] innerClasses,Object builderObj) throws IllegalArgumentException, IllegalAccessException, InvocationTargetException{
-		
-		for(Class<?> cls : innerClasses){
-			if(cls.getName().contains(ms.getMessageName()+"OrBuilder")){
-				continue;
-			}
-			if(cls.getName().contains(ms.getMessageName())){
-				
-				
-							Method [] mths = cls.getDeclaredMethods();
-							
-							
-								for(Method m : mths){
-									System.out.println(m.getName());
-									if(m.getName().equals("newBuilder")){
-										
-										builderObj  =	m.invoke(null);
-										break;
-									}
-								}
-						
-					
-				
-			}
-			
-		}
-		
-		return builderObj;
-	}
 	
-	public Object makeObject(MessageInformation ms,List<MessageInformation> listMsg,String wsdlNSToPkg) throws ClassNotFoundException, IllegalAccessException, InstantiationException{
-		
-		Class<?> jaxbClass = Thread.currentThread().getContextClassLoader().loadClass(wsdlNSToPkg +"." +ms.getMessageName());
-		Object obj = jaxbClass.newInstance();
-		for(ElementInformation el : ms.getElementInfo()){
-			
-			try {
-				invokeMtd(ms,listMsg,el,obj,wsdlNSToPkg);
-				
-				
-			} catch (IllegalArgumentException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			} catch (InvocationTargetException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
-			
-		}
-		
-		return obj;
-	}
 	
-	public String firstLetterUpperCase(String word){
-		char [] ch = word.toCharArray();
-		String str = Character.toString(ch[0]).toUpperCase() + word.substring(1);
-		return str;
-	}
-	public void invokeMtd(MessageInformation ms,List<MessageInformation> listMsg,ElementInformation el,Object jaxbObj,String wsdlNSToPkg) throws IllegalArgumentException, IllegalAccessException, InvocationTargetException, ClassNotFoundException, InstantiationException{
-		 Method []  mths = jaxbObj.getClass().getMethods();
-		 String dataType = el.getDataType();
-		 for(Method m : mths){
-			 if(!dataType.equals("boolean")){
-				 
-				 if(("set" + firstLetterUpperCase(el.getJaxbName())).equals(m.getName())){
-					 if(dataType.equals("string")){
-					 m.invoke(jaxbObj,"test");
-					 }
-					 else if(dataType.equals("int")){
-						 m.invoke(jaxbObj,12);
-					 }
-					 else if(dataType.equals("integer")){
-						 m.invoke(jaxbObj,100);
-					 }
-					 else if(dataType.equals("float")){
-							 m.invoke(jaxbObj,100.00f);
-					 }else{
-						 for(MessageInformation info : listMsg){
-							 if(info.getMessageName().equals(dataType)){
-								 m.invoke(jaxbObj,makeObject(info,listMsg,wsdlNSToPkg));
-							 }
-							 
-						 }
-						 
-					 }
-				 }
-			 }
-		 }
-		
-	}
 	
-	public void loadEproto(List<URI> paths){
-		
-	}
 	
-	public void compile(List<URI> sources){
-		List<SimpleJavaFileObject> jfoList = new ArrayList<SimpleJavaFileObject>();
-		for(URI uri : sources){
-			SimpleJavaFileObject jfo = new ExtSimpleFileObject(uri,JavaFileObject.Kind.SOURCE);
-			jfoList.add(jfo);
-			}
-		List<String> optionList = new ArrayList<String>();
-		// set compiler's classpath to be same as the runtime's
-		optionList.addAll(Arrays.asList("-classpath",System.getProperty("java.class.path")));
 	
-		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
-		PrintWriter out = new PrintWriter(System.out);
-		JavaCompiler.CompilationTask task = compiler.getTask(out,null,null,optionList,null,jfoList);
-		task.call();
-		
-		
-		
-		
-	}
 	
-	class ExtSimpleFileObject extends SimpleJavaFileObject{
-		
-		public ExtSimpleFileObject(URI uri,JavaFileObject.Kind knd) {
-			super(uri,knd);
-			
-		}
-	}
 	
-	public void generateJaxbClasses(String path,String destDir) throws Exception{
+	public void generateJaxbClasses(String path,String destDir,File binDir) throws Exception{
 		String [] testArgs = {"-serviceName","CalculatorService",
 				  "-genType","ServiceFromWSDLIntf",	
 				  "-wsdl",path,
 				  "-gip","com.ebay.test.soaframework.tools.codegen",
 				  "-dest",destDir,
 				  "-src",destDir,
-				  "-bin",destDir+"/bin",
+				  "-bin",binDir.getAbsolutePath(),
 				  "-slayer","INTERMEDIATE",
-				  "-fastserformat","protobuf",
+				  "-nonXSDFormats","protobuf",
 				  "-enabledNamespaceFolding",
 				  "-scv","1.0.0",
 				  "-pr",destDir};
@@ -448,211 +198,6 @@ public class SequenceNumberConsistencyCheck extends AbstractServiceGeneratorTest
 		
 	}
 	
-	public String invokeNewInstance(Class<?> jaxbClass,Class<?> eprotoClass,Class<?> protoClass,String typeName,Object jaxbObject){
-		
-		Class<?>	classForType = null;
-		Object obj = null;
-		try {
-					Method method =eprotoClass.getMethod("newInstance",jaxbClass);
-					Class<?> innerClasses [] =  protoClass.getDeclaredClasses();
-					Constructor<?> []  constructor =  eprotoClass.getDeclaredConstructors();
-					for(Class<?> cl : innerClasses){
-						if(!cl.getName().contains(typeName + "OrBuilder"))
-						if(cl.getName().contains(typeName)){
-							classForType = cl;
-						}
-					
-					}
-					
-					Constructor<?> [] constr = eprotoClass.getDeclaredConstructors();
-					Constructor<?> builderCon = null;
-					
-					//FitmentFieldValue$Builder
-					for(Constructor<?> ct : constr){
-						if(ct.getParameterTypes().length == 1){
-							
-								builderCon = ct;
-								ct.setAccessible(true);
-						}	
-					
-					}
-					
-					Method m =  classForType.getMethod("newBuilder");
-					Object ob = m.invoke(null);
-				    
-					Class<?> builders = ob.getClass();
-					
-					
-					Method buildMethod = builders.getMethod("build");
-					Constructor<?> [] builder = builders.getDeclaredConstructors();
-					Constructor<?> cons = null;
-					for(Constructor<?> ct : builder){
-					 
-						if(ct.getParameterTypes().length == 0){
-							cons = ct;
-							ct.setAccessible(true);
-						}
-						
-					}
-					
-					Object builtObj = buildMethod.invoke(cons.newInstance());
-					
-					
-					 Object eprotoObj = builderCon.newInstance(builtObj);
-					
-					  
-			
-					 obj  = method.invoke(eprotoObj,jaxbObject);
-					 
-
 	
-		
-		} catch (SecurityException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (NoSuchMethodException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalArgumentException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (InvocationTargetException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (InstantiationException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		return obj.getClass().getName(); 
-
-	}
-	
-	
-public String invokeGetters(Class<?> jaxbClass,Class<?> eprotoClass,Class<?> protoClass,String methodName,String typeName,Object builder){
-		
-		Class<?>	classForType = null;
-		Object obj = null;
-		try {
-					Method method =eprotoClass.getMethod(methodName);
-					Class<?> innerClasses [] =  protoClass.getDeclaredClasses();
-					Constructor<?> []  constructor =  eprotoClass.getDeclaredConstructors();
-					for(Class<?> cl : innerClasses){
-						if(!cl.getName().contains(typeName + "OrBuilder"))
-						if(cl.getName().contains(typeName)){
-							classForType = cl;
-						}
-					
-					}
-					
-					Constructor<?> [] constr = eprotoClass.getDeclaredConstructors();
-					Constructor<?> builderCon = null;
-					
-					//FitmentFieldValue$Builder
-					for(Constructor<?> ct : constr){
-						if(ct.getParameterTypes().length == 1){
-							
-								builderCon = ct;
-								ct.setAccessible(true);
-						}	
-					
-					}
-					
-					
-					
-					 Object eprotoObj = builderCon.newInstance(builder);
-					
-					  
-			
-					 obj  = method.invoke(eprotoObj);
-					 
-
-	
-		
-		} catch (SecurityException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (NoSuchMethodException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalArgumentException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (InvocationTargetException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (InstantiationException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		return obj.getClass().getName(); 
-
-	}
-	
-	
-	
-	public List<String> assertReturnTypes(Class<?> eprotoClass){
-		List<String> returntype = new ArrayList<String>();
-		
-		
-		Method[] methods = eprotoClass.getDeclaredMethods();
-		for(Method m : methods){
-			returntype.add(m.getReturnType().getName());
-		}
-		
-		return returntype;
-		
-	}
-	
-	public void compile(String relativePath){
-		
-		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
-		int result = compiler.run(null, null, null,relativePath);
-
-		System.out.println("Compile result code = " + result);
-	}
-	
-	
-	public String packagetoDirPath(String pkg){
-		
-		return pkg.replace(".","/");
-		
-	}
-	
-	public void compileJProto(String src_dir,String dst_dir,String protoloc){
-		String s = null;
-		try {
-            
-		    // run the Unix "ps -ef" command
-	            // using the Runtime exec method:
-	            Process p = Runtime.getRuntime().exec("protoc.exe -I="+src_dir+" --java_out="+dst_dir+" " + protoloc);
-	            
-	            BufferedReader stdInput = new BufferedReader(new 
-	                 InputStreamReader(p.getInputStream()));
-
-	            BufferedReader stdError = new BufferedReader(new 
-	                 InputStreamReader(p.getErrorStream()));
-
-	            // read the output from the command
-	            System.out.println("Here is the standard output of the command:\n");
-	            while ((s = stdInput.readLine()) != null) {
-	            	System.out.println(s);
-	            }
-	            
-	            while ((s = stdError.readLine()) != null) {
-	            	System.out.println(s);
-	            }
-		}catch (IOException e) {
-            System.out.println("exception happened - here's what I know: ");
-            e.printStackTrace();
-            System.exit(-1);
-        }
-		
-	}
 
 }
